# libPorpoise

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.1.0.md  TODO.md  build.bat  build.sh  pad_config.ini  vi_config.ini
docs/: API.md  DVD_FILESYSTEM.md  FUTURE_EXCEPTION_HANDLING.md  IMPLEMENTATION_STATUS.md  MEMORY_EMULATION.md  PAD_CONFIGURATION.md  SDL2_SETUP.md  THREADING_ARCHITECTURE.md  VI_MODULE.md
examples/: CMakeLists.txt  aram_test.c  card_test.c  dvd_test.c  locked_cache_example.c  pad_test.c  reset_button_example.c  simple.c  thread_test.c  vi_test.c
include/dolphin/: PADConfig.h  VIConfig.h  ar.h  card.h  card_internal.h  dvd.h  dvd_internal.h  exi.h  gecko_memory.h  os.h  pad.h  types.h  vi.h
include/dolphin/os/: OSAlarm.h  OSAlloc.h  OSAssert.h  OSCache.h  OSContext.h  OSError.h  OSFont.h  OSInterrupt.h  OSMemory.h  OSMessage.h  OSMutex.h  OSReset.h  OSResetSW.h  OSRtc.h  OSSemaphore.h  OSThread.h  OSTime.h
src/ar/: AR.c  ARQ.c
src/card/: CARD.c  CARDBios.c  CARDBlock.c  CARDCheck.c  CARDCreate.c  CARDDelete.c  CARDFormat.c  CARDMount.c  CARDOpen.c  CARDRead.c  CARDRename.c  CARDStat.c  CARDWrite.c
src/dvd/: DVD.c  DVDError.c  DVDFatal.c  DVDLow.c  DVDQueue.c  DVD_additions.c
src/exi/: EXI.c
src/os/: GeckoMemory.c  OS.c  OSAlarm.c  OSAlloc.c  OSCache.c  OSContext.c  OSError.c  OSFont.c  OSInterrupt.c  OSMemory.c  OSMessage.c  OSMutex.c  OSReset.c  OSResetSW.c  OSRtc.c  OSSemaphore.c  OSThread.c  OSTime.c  OSUart.c
src/pad/: PAD.c  PADClamp.c  PADConfig.c
src/si/: SI.c
src/vi/: VI.c  VIConfig.c
